Set NODE_ENV in github action

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: production
     defaults:
       run:
         working-directory: _site
