Include path prefix in asset compilation

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
+      PATH_PREFIX: /${GITHUB_REPOSITORY}
     defaults:
       run:
         working-directory: _site
