Only set PATH_PREFIX for specific task

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -5,7 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
-      PATH_PREFIX: /${GITHUB_REPOSITORY}
     defaults:
       run:
         working-directory: _site
@@ -24,7 +23,7 @@ jobs:
 
       - run: npx @11ty/eleventy --pathprefix=${GITHUB_REPOSITORY#*/}
 
-      - run: npx webpack
+      - run: PATH_PREFIX=/${GITHUB_REPOSITORY} npx webpack
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
