--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
+      CNAME: handbook.agtrade.digital
     defaults:
       run:
         working-directory: _site
@@ -24,6 +25,8 @@ jobs:
       - run: npx @11ty/eleventy --pathprefix=${GITHUB_REPOSITORY#*/}
 
       - run: PATH_PREFIX=/${GITHUB_REPOSITORY#*/} npx webpack
+
+      - run: echo ${CNAME} > build/CNAME
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
